spaces index view doneish

--- a/app/views/spaces/new.html.erb
+++ b/app/views/spaces/new.html.erb
@@ -1,5 +1,8 @@
-<%= form_with model: @space do |item| %>
-  <%= item.label :name %>
-  <%= item.text_field :name %>
-<%= item.submit %>
+<%= simple_form_for [@user_id, @space] do |item| %>
+  <%= item.input :capacity %>
+  <%= item.input :space_type %>
+  <%= item.input :address %>
+  <%= item.input :title %>
+  <%= item.input :price %>
+  <%= item.submit "Submit review", class: "btn btn-primary" %>
 <% end %>
