--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -5,3 +5,22 @@
 <% @spaces.each do |space| %>
   <%= link_to space.title, space_path(space) %>
 <% end %>
+
+<div class="index">
+  <% @spaces.each do |space| %>
+    <div class="single-space">
+      <div>
+        <h4><%= space.title %></h4>
+        <%= space.address %>
+      </div>
+
+      <div class="moreinfo">
+        <%= link_to "More Info",space_path(space) %>
+        <%= link_to "Edit", edit_space_path(space), class: "ms-3 text-warning"  %>
+        <%= link_to space_path(space.id), data: {turbo_method: :delete, turbo_confirm: "Delete #{space.title}?"} do %>
+        <i class="fas fa-trash-alt"></i>
+      </div>
+      <% end %>
+    </div>
+  <% end %>
+</div>
