--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,8 +1,10 @@
-<%= @space.title %>
+<h2><%= @space.title %></h2>
+  <p><strong>Space type:</strong> <%= @space.space_type %></p>
+  <p><strong>Address:</strong> <%= @space.address %></p>
+  <p><strong>Capacity:</strong> <%= @space.capacity %></p>
+  <p><strong>Price:</strong> $<%= @space.price %></p>
 
+  <%= link_to "Edit", edit_space_path(@space), class: "btn btn-warning" %>
+  <%= link_to "Delete", space_path(@space), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
 
-  <p>Title: <%= @space.title %></p>
-  <p>Space type: <%= @space.space_type %></p>
-  <p>Address: <%= @space.address %></p>
-  <p>Capacity: <%= @space.capacity %></p>
-  <p>Price: $<%= @space.price %></p>
+  <%= link_to "Go Back to all lisings", spaces_path, class: "btn btn-primary" %>
