--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,5 +1,5 @@
  <div class="container">
-  <div class ="row justify-content-center">
+  <div class ="row justify-content-center mt-5">
     <div class="col 12 col-lg-6">
       <img class="card-img-top" src="https://thumbor.forbes.com/thumbor/fit-in/900x510/https://www.forbes.com/home-improvement/wp-content/uploads/2022/02/featured_image_backyard_landscaping_before_and_after.jpeg.jpg" alt="Card image cap">
         <div class="card-body" style="height: 300px; overflow-y: auto;">
