--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,6 +5,14 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-6">
+            <input class="w-full text-center p-3 border border-gray-300 text-gray-900 rounded-pill placeholder-gray-900 font-bold"
+            type="search" placeholder="Search for spaces">
+            <%# <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16"> <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/> </svg> %>
+          </div>
+        </div>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
           <li>
