index page v1 ok + new page v1 ok

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,18 +1,15 @@
 <div class="navbar navbar-expand-lg navbar-light navbar-lewagon">
   <div class="container-fluid">
-      <%= link_to image_tag("https://t4.ftcdn.net/jpg/03/46/81/19/360_F_346811994_pNGR5Tyg0l9sksaKSGfb5XuxbHk7Gyiv.jpg"), spaces_path, class:"navbar-brand" %>
+      <%= link_to image_tag("/assets/spaces.png"), spaces_path, class:"navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-        <div class="row justify-content-center">
-          <div class="col-12 col-lg-6">
-            <input class="w-full text-center p-3 border border-gray-300 text-gray-900 rounded-pill placeholder-gray-900 font-bold"
-            type="search" placeholder="Search for spaces">
-            <%# <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16"> <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/> </svg> %>
-          </div>
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-6">
+          <input class="w-full text-center p-2 border border-gray-300 text-gray-900 rounded-pill placeholder-gray-900 font-bold"
+          type="search" placeholder="Search for spaces">
         </div>
-
+      </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
           <li>
