--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
           <%= render "shared/navbar" %>
           <%= yield %>
+          <%= render "shared/footer" %>
           <p class="notice"><%= notice %></p>
           <p class="alert"><%= alert %></p>
         </div>
