--- a/app/views/spaces/new.html.erb
+++ b/app/views/spaces/new.html.erb
@@ -8,7 +8,7 @@
           <%= item.input :address %>
           <%= item.input :title %>
           <%= item.input :price %>
-          <%= item.submit "Book now", class: "btn btn-primary" %>
+          <%= item.submit "Submit", class: "btn btn-primary" %>
           <% end %>
     </div>
       <div class="d-flex justify-content-center align-items-center col-lg-4">
