--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,14 @@
+<div class="row g-3">
 <%= simple_form_for [@space, @booking] do |item| %>
-  <%= item.input :start_date_time, as: :date, html5: true %>
-  <%= item.input :end_date_time, as: :date, html5: true %>
+  <div class="col">
+  <%= item.input :start_date_time, as: :date, html5: true, class:"form-control" %>
+  <div class="col">
+  <%= item.input :end_date_time, as: :date, html5: true, class:"form-control" %>
   <%=%>
   <%= item.submit "Book Space", class: "btn btn-primary" %>
 <% end %>
+    <input type="text" class="form-control" placeholder="Start date" aria-label="Start date">
+  </div>
+    <input type="text" class="form-control" placeholder="End date" aria-label="End date">
+  </div>
+</div>
