--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -12,10 +12,11 @@
             <p><strong>Price:</strong> $<%= @space.price %></p>
           <%= link_to "Delete",
             space_path(@space),
-            data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+            data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
+            class: "btn btn-danger"
           %>
-          <%= link_to "Edit", edit_space_path(@space) %>
-          <%= link_to "Go Back to all lisings", spaces_path, class: "btn btn-primary" %>
+          <%= link_to "Edit", edit_space_path(@space), class:"btn btn-warning" %>
+          <%= link_to "All listings", spaces_path, class: "btn btn-primary" %>
         </div>
       </div>
     </div>
