--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -4,3 +4,12 @@
   <%=%>
   <%= item.submit "Book Space", class: "btn btn-primary" %>
 <% end %>
+All the bookings for this space are listed below:
+<div>
+    <% @space.bookings.each do |booking| %>
+      <div>
+        <strong>From</strong><td><%= booking.start_date_time %></td> <strong>To</strong>
+        <td><%= booking.end_date_time %></td>
+      </div>
+    <% end %>
+</div>
