--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,21 +1,27 @@
-<div class="container">
+<div class="banner" style="background-image: url('https://thelatch.com.au/wp-content/uploads/2019/11/pool-hire-1.jpg');">
+  <div class="container-1">
+    <h1>Spaces allows you to rent/list a private spot for event purposes!</h1>
+    <p>Save money! Party! Be happy!</p>
+  </div>
+</div>
+
+<div class="container mt-5 mb-5">
   <div class="row row-cols-4">
     <% @spaces.each do |space| %>
-      <div class="col mt-5">
+      <div class="col mb-5">
         <div class="card h-100">
-            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-              <%= cl_image_tag space.photo.key || "https://media.istockphoto.com/id/1335247217/vector/loading-icon-vector-illustration.jpg?s=612x612&w=0&k=20&c=jARr4Alv-d5U3bCa8eixuX2593e1rDiiWnvJLgHCkQM=", class:"card-img-top", height: 300, width: 400, crop: :fill %>
+            <%= cl_image_tag space.photo.key || "https://media.istockphoto.com/id/1335247217/vector/loading-icon-vector-illustration.jpg?s=612x612&w=0&k=20&c=jARr4Alv-d5U3bCa8eixuX2593e1rDiiWnvJLgHCkQM=", class:"card-img-top", height: 300, width: 400, crop: :fill %>
+            <div class="card-body">
               <h5 class="card-title"><%= space.title %></h5>
               <p class="card-text"><%= space.address %></p>
+              <p class="card-text">$<%= space.price %></p>
             </div>
             <div class="card-footer text-center">
-              <%= link_to "More Info",space_path(space), class: "btn btn-primary"  %>
-              <%= link_to "Book Now", new_space_booking_path(space.id), class:"btn btn-primary" %>
+              <%= link_to "More Info",space_path(space), class: "btn btn-primary btn-info"  %>
+              <%# <%= link_to "Book Now", new_space_booking_path(space.id), class:"btn btn-primary" %>
             </div>
         </div>
       </div>
     <% end %>
   </div>
 </div>
-
-
