--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -2,7 +2,7 @@
   <div class ="row justify-content-center mt-5">
     <div class="col 12 col-lg-6 card-show mt-3">
       <div class="card h-100">
-        <%= cl_image_tag @space.photo.key || "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/claude-monets-house-and-gardens-in-giverny-france-news-photo-1042013294-1562610151.jpg?crop=1.00xw:0.753xh;0,0.0671xh&resize=640:*", class:"card-img-top mx-auto w-100" %>
+        <%# <%= cl_image_tag @space.photo.key || "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/claude-monets-house-and-gardens-in-giverny-france-news-photo-1042013294-1562610151.jpg?crop=1.00xw:0.753xh;0,0.0671xh&resize=640:*", class:"card-img-top mx-auto w-100" %> %>
           <div class="card-body">
             <h2><%= @booking.space.title %></h2>
               <p><strong>Booking from</strong> <%= @booking.start_date_time %> <strong>to</strong>
