--- a/app/views/spaces/_form.html.erb
+++ b/app/views/spaces/_form.html.erb
@@ -1,5 +1,5 @@
-<%= simple_form_for(article) do |f| %>
+<%= simple_form_for(space) do |f| %>
   <!-- [...] -->
-  <%= f.input :photo, as: :file %>
+  <%= f.input :photo, as: :file, input_html: { multiple: true } %>
   <!-- [...] -->
 <% end %>
