--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,7 +1,18 @@
+
+
 <% @bookings.each do |booking| %>
-  <p><strong>Booking from</strong> <%= booking.start_date_time %> <strong>to</strong>
-  <%= booking.end_date_time %></p>
-  <p><strong>Title:</strong> <%= booking.space.title %></p>
-  <p><strong>Address:</strong> <%= booking.space.address %></p>
-  <p><strong>Price:</strong> $<%= booking.space.price %></p>
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title"><%= booking.space.title %></h5>
+        <p class="card-text"><%= booking.space.address %></p>
+      </div>
+      <div>
+        <%= link_to "More Info",booking_path(booking), class: "btn btn-primary"  %>
+        <%= link_to booking_path(booking.id), data: {turbo_method: :delete, turbo_confirm: "Cancel Booking for #{booking.space.title}?"} do %>
+        <i class="fas fa-trash-alt"></i>
+        <% end %>
+         <%= link_to "Edit", edit_booking_path(booking.id) %>
+      </div>
+  </div>
 <% end %>
