--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -4,7 +4,7 @@
       <div class="col mt-5">
         <div class="card h-100">
             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-              <%= cl_image_tag space.photo.key || "https://media.istockphoto.com/id/1335247217/vector/loading-icon-vector-illustration.jpg?s=612x612&w=0&k=20&c=jARr4Alv-d5U3bCa8eixuX2593e1rDiiWnvJLgHCkQM=", class:"card-img-top", height: 300, width: 400, crop: :fill %>
+              <%# <%= cl_image_tag space.photo.key || "https://media.istockphoto.com/id/1335247217/vector/loading-icon-vector-illustration.jpg?s=612x612&w=0&k=20&c=jARr4Alv-d5U3bCa8eixuX2593e1rDiiWnvJLgHCkQM=", class:"card-img-top", height: 300, width: 400, crop: :fill %>
               <h5 class="card-title"><%= space.title %></h5>
               <p class="card-text"><%= space.address %></p>
             </div>
@@ -17,5 +17,3 @@
     <% end %>
   </div>
 </div>
-
-
