--- a/app/views/spaces/confirm_listing.html.erb
+++ b/app/views/spaces/confirm_listing.html.erb
@@ -15,29 +15,10 @@
             data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
             class: "btn btn-danger"
           %>
+          <%= link_to "Edit", edit_space_path(@space), class:"btn btn-warning" %>
           <%= link_to "All listings", spaces_path, class: "btn btn-primary" %>
-          <%= link_to "Book Now", new_space_booking_path(@space), class: "btn btn-primary" %>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-
-<div class="row g-3">
-<%= simple_form_for [@space, @booking] do |item| %>
-  <div class="col">
-<%= item.input :start_date_time, as: :date, html5: true, class: "form-control booking-start", data: { "disable-dates": "disableBookedDates" } %>
-<%= item.input :end_date_time, as: :date, html5: true, class: "form-control booking-end" %>
-  <%= item.submit "Book Space", class: "btn btn-primary" %>
-<% end %>
-
-All the bookings for this space are listed below:
-<div>
-    <% @space.bookings.each do |booking| %>
-      <div>
-        <strong>From</strong><td><%= booking.start_date_time %></td> <strong>To</strong>
-        <td><%= booking.end_date_time %></td>
-      </div>
-    <% end %>
 </div>
