--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -22,7 +22,7 @@
           </div>
           <div class="card-footer text-center">
             <%= link_to "More Info",space_path(space), class: "btn btn-primary btn-info"  %>
-            <% <%= link_to "Book Now", new_space_booking_path(space.id), class:"btn btn-primary" %>
+            <%= link_to "Book Now", new_space_booking_path(space.id), class:"btn btn-primary" %>
           </div>
         </div>
       </div>
