--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,11 +6,12 @@
 // External libraries
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome";
-
+@import 'flatpickr/dist/flatpickr.css';
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
 
+@import "flatpickr/dist/flatpickr.css";
 .flash {
   padding: 16px 24px;
   display: flex;
