--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "footer";
+@import "new-space";
 
 
 .container-1 {
@@ -35,18 +36,21 @@
 .card-img-top {
   border-top-right-radius: 20px;
   border-top-left-radius: 20Px;
-}
-
-.btn-info {
   width: 100%;
-  display: block;
+  height: 15vw;
+  object-fit: cover;
 }
 
-.card-show {
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  border-radius: 20px;
-  flex-direction: row;
+.card-title {
+  font-size: large;
+  font-weight: 600;
 }
-.card-show img {
-  width: 30%;
+
+.card-text {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.card-price {
+  font-weight: 500;
+  text-decoration: underline;
 }
