front-end donish

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,8 @@
       </div>
     </div>
     <div>
-      <%= link_to "List your space", new_space_path, class:"nav-link hidden md:block" %>
+      <%= link_to "List your space", new_space_path, class:"nav-link d-flex" %>
+      <%= link_to "My bookings", my_bookings_path, class:"nav-link"  %>
       <%# mobile menu %>
       <div class="block md:hidden">
         <div class="dropdown">
