--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="container mt-5 mb-5">
+<div class="container container-2 mt-5 mb-5">
   <div class="row row-cols-4">
     <% @spaces.each do |space| %>
       <div class="col mb-5">
