--- a/app/views/spaces/new.html.erb
+++ b/app/views/spaces/new.html.erb
@@ -9,7 +9,7 @@
           <%= item.input :address %>
           <%= item.input :price, label: "Price (AUD)" %>
           <%= item.input :photos, as: :file, input_html: { multiple: true } %>
-          <%= item.submit "Submit", class: "btn btn-primary" %>
+          <%= item.submit "Submit", class: "button-5" %>
           <% end %>
     </div>
   </div>
