--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,6 +12,10 @@
   margin: auto;
 }
 
+.container-2 {
+  background-color: #FDD16C;
+}
+
 .banner {
   background-size: cover;
   background-position: center;
