--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,45 +1,39 @@
- <div class="container">
-  <div class ="row justify-content-center mt-3">
-    <div class="col 12 col-lg-6 card-show mt-3">
-      <div class="card h-100">
-        <% if @space.photos.attached? %>
-          <% @space.photos.each do |photo| %>
-            <%= cl_image_tag photo.key, height: 300, crop: :fill %>
-          <% end %>
+<div class ="row justify-content-center mt-3">
+  <div class="col 12 col-lg-6 card-show mt-3">
+    <div class="card h-100">
+      <% if @space.photos.attached? %>
+        <% @space.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, height: 300, crop: :fill %>
         <% end %>
-        <div class="card-body">
-          <h2><%= @space.title %></h2>
-          <p><strong>Space type:</strong> <%= @space.space_type %></p>
-          <p><strong>Address:</strong> <%= @space.address %></p>
-          <p><strong>Capacity:</strong> <%= @space.capacity %></p>
-          <p><strong>Price:</strong> $<%= @space.price %></p>
-        </div>
-        <div class="card-footer text-center">
-          <%= link_to "Book Now", new_space_booking_path(@space), class: "btn btn-primary" %>
+      <% end %>
+      <div class="card-body p-5">
+        <h2 class="card-title mb-2"><%= @space.title %></h2>
+        <p class="card-text">Space type: <%= @space.space_type %></p>
+        <p class="card-text">Address: <%= @space.address %></p>
+        <p class="card-text">Capacity: <%= @space.capacity %></p>
+        <p class="card-price">Price: $<%= @space.price %></p>
+        <div class="booking_form mt-3">
+          <div id='space-booking-dates' data-unavailable="<%= @space.unavailable_dates.to_json %>">
+          <%= simple_form_for [@space, @booking = Booking.new], data: { controller: 'flatpickr' } do |item| %>
+          <%= item.input :start_date_time, as: :string, input_html: { data: { flatpickr_target: "startTime" } } %>
+          <%= item.input :end_date_time, as: :string, input_html: { data: { flatpickr_target: "endTime" } } %>
+          <% end %>
+
+          All the bookings for this space are listed below:
+          <div>
+              <% @space.bookings.each do |booking| %>
+                <div>
+                  <strong>From</strong><td><%= booking.start_date_time %></td> <strong>To</strong>
+                  <td><%= booking.end_date_time %></td>
+                </div>
+              <% end %>
+              </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-
-<div class="row g-3">
-  <div class="booking_form">
-    <div id='space-booking-dates' data-unavailable="<%= @space.unavailable_dates.to_json %>">
-    <%= simple_form_for [@space, @booking = Booking.new], data: { controller: 'flatpickr' } do |item| %>
-    <%= item.input :start_date_time, as: :string, input_html: { data: { flatpickr_target: "startTime" } } %>
-    <%= item.input :end_date_time, as: :string, input_html: { data: { flatpickr_target: "endTime" } } %>
-    <%= item.submit "Book Space", class: "btn btn-primary" %>
-    <% end %>
-
-    All the bookings for this space are listed below:
-    <div>
-        <% @space.bookings.each do |booking| %>
-          <div>
-            <strong>From</strong><td><%= booking.start_date_time %></td> <strong>To</strong>
-            <td><%= booking.end_date_time %></td>
-          </div>
-        <% end %>
-        </div>
+      <div class="card-footer text-center">
+        <%= link_to "Book Now", my_bookings_path(@space), class: "btn btn-primary" %>
+      </div>
     </div>
   </div>
 </div>
