--- a/app/views/spaces/confirm_listing.html.erb
+++ b/app/views/spaces/confirm_listing.html.erb
@@ -15,13 +15,11 @@
           <p class="card-text">Capacity: <%= @space.capacity %></p>
           <p class="card-price">Price: $<%= @space.price %></p>
           <div class="card-footer mt-3">
-          <%= link_to "Delete",
-            spaces_path,
-            data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
-            class: "btn btn-danger"
-          %>
+          <%= link_to spaces_path,
+            data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} do %>
+          <i class="fas fa-trash-alt"></i>
+          <% end %>
           <%= link_to "Edit", edit_space_path(@space), class:"btn btn-warning" %>
-          <%= link_to "My listings", spaces_path, class: "btn btn-primary" %>
           </div>
         </div>
       </div>
