--- a/app/views/spaces/new.html.erb
+++ b/app/views/spaces/new.html.erb
@@ -2,7 +2,7 @@
   <h1 class="title text-center mt-3">List your space</h1>
   <div class="row justify-content-center mt-3">
     <div class="col 12 col-lg-6">
-          <%= simple_form_for [@user_id, @space] do |item| %>
+          <%= simple_form_for @space do |item| %>
           <%= item.input :title %>
           <%= item.input :space_type %>
           <%= item.input :capacity, label: "Capacity (number of people)" %>
